--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,66 @@ header {
     text-align: center;
 }
 
-@media (min-width: 769px) and (max-width: 1300px) {
+@media screen and (max-width: 900px) {
+    .container-left {
+    width: 100%;
+    margin-top: 0;
+    display: block;
+    padding: 0;
+    height: 50vh;
+    }
+
+    .container-right {
+        height: auto;
+        width: 100%;
+        display: block;
+        position: static;
+        padding: 30px;
+    }
+
+    .main-img {
+        position: static;
+        max-width: 90%;
+        display: block;
+        margin: auto;
+    }
+
+    header {
+        display: none;
+    }
+
+    h1 {
+        letter-spacing: 0px;
+        line-height: 52px;
+        font-size: 36px;
+        font-weight: 400;
+        width: auto;
+        margin: 58px 50px 0px;
+        text-align: center;
+    }
+
+    p {
+        letter-spacing: 0px;
+        line-height: 24px;
+        font-size: 14px;
+        font-weight: 400;
+        opacity: 0.6;
+        margin: 15px 40px;
+        width: auto;
+        text-align: center;
+    }
+
+    button {
+        font-size: 24px;
+        letter-spacing: 0px;
+        line-height: 36px;
+        font-weight: 400;
+        display: block;
+        margin: 0 auto; 
+    }
+}
+
+@media screen and (min-width: 901px) and (max-width: 1300px) {
     
     .container-left {
         display: inline-block;
@@ -133,5 +192,15 @@ header {
     header {
         margin: 24px 0px 0px 45px;
         text-align: center;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .container-left {
+        display: inline-block;
+        height: 70%;
+        width: 60%;
+        padding-left: 90px;
+        margin-top: 16.7%;
     }
 }
