--- a/styles.css
+++ b/styles.css
@@ -109,10 +109,10 @@ header {
 @media screen and (max-width: 900px) {
     .container-left {
     width: 100%;
-    margin-top: 0;
+    margin: 0;
     display: block;
     padding: 0;
-    height: 40vh;
+    height: 50%;
     }
 
     .container-right {
