--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ header {
     width: 100%;
     margin: 0;
     display: block;
-    padding: 0;
+    padding: 35px 0px 0px;
     height: 50%;
     }
 
@@ -137,10 +137,10 @@ header {
     h1 {
         letter-spacing: 0px;
         line-height: 52px;
-        font-size: 36px;
+        font-size: 42px;
         font-weight: 400;
         width: auto;
-        margin: 35px 50px 0px;
+        margin: 0px 75px 0px;
         text-align: center;
     }
 
