--- a/styles.css
+++ b/styles.css
@@ -112,11 +112,11 @@ header {
     margin: 0;
     display: block;
     padding: 25px 0px 0px;
-    height: 45%;
+    height: 50%;
     }
 
     .container-right {
-        height: 55%;
+        height: 50%;
         width: 100%;
         display: block;
         position: static;
@@ -128,6 +128,7 @@ header {
         max-width: 90%;
         display: block;
         margin: auto;
+        height: 360px;
     }
 
     header {
