--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ header {
     }
 
     .container-right {
-        height: 60%;
+        height: auto;
         width: 100%;
         display: block;
         position: static;
