--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ header {
         width: 100%;
         display: block;
         position: static;
-        padding: 30px;
+        padding: 0px;
     }
 
     .main-img {
@@ -128,11 +128,25 @@ header {
         max-width: 90%;
         display: block;
         margin: auto;
-        height: 325px;
+        height: 380px;
+        margin-top: 25px;
     }
 
     header {
-        display: none;
+        width: 100%;
+        padding: 20px 0px 0px;
+        display: flex;
+    }
+
+    a {
+        color: #5d5d7d;
+        letter-spacing: 0px;
+        line-height: 41px;
+        font-size: 25px;
+        font-weight: 400;
+        cursor: pointer;
+        text-align: center;
+        margin: 0px 24px 0px auto;
     }
 
     h1 {
