--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,7 @@ header {
         margin: auto;
         height: 380px;
         margin-top: 25px;
+        padding-bottom: 12px;
     }
 
     header {
